--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="col-md-6 mr-auto">
                 <h2>Knight is more than just a page builder.</h2>
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis pulvinar vestibulum. Donec eleifend, sem sed dictum mattis, turpis purus placerat eros.</p>
-                <a href="#" class="btn btn-light">
+                <a href="https://fededeep.github.io/DePalo.knight/" class="btn btn-light">
                     Try the live demo
                 </a>
             </div>
