--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <h2>Knight is more than just a page builder.</h2>
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis pulvinar vestibulum. Donec eleifend, sem sed dictum mattis, turpis purus placerat eros.</p>
                <button class="btn btn-primary d-inline-flex flex-row align-items-center">
-                    Get started now
+                    Get started now1
                     <em class="ml-2" data-feather="arrow-right"></em>
                 </button>
             </div>
