TRY NOW THE LIVE DEMO

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="col-md-6 mr-auto">
                 <h2>Knight is more than just a page builder.</h2>
                 <button class="btn btn-primary">
-                    Create your account
+                    TRY NOW THE LIVE DEMO
                 </button>
             </div>
             <div class="col-md-5">
