TRY NOW THE LIVE DEMO

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
         <div class="row mt-6">
             <div class="col-md-6 mr-auto">
                 <h2>Knight is more than just a page builder.</h2>
-                <button class="btn btn-primary">
+                <a href="#" class="btn btn-primary">
                     TRY NOW THE LIVE DEMO
-                </button>
+                </a>
             </div>
             <div class="col-md-5">
                 <div class="slick-about">
