--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
+    <body background-color:="#012334">
+
 <!--navigation-->
 <section class="smart-scroll">
     <div class="container-fluid">
@@ -92,7 +94,7 @@
     <div class="container">
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
-                <h1 class="heading-black text-capitalize">Quickly build landing pages with Knight</h1>
+                <h1 class="heading-black text-capitalize">Esercitazione 24 Febbraio 2023</h1>
                 <p class="lead py-3">Knight is a platform that helps freelancers and companies build beautiful landing
                     pages in minutes. Sign up for free.</p>
                 <button class="btn btn-primary d-inline-flex flex-row align-items-center">
