--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <h1 class="heading-black text-capitalize">Esercitazione 24 Febbraio 2023</h1>
                 <p class="lead py-3">Knight is a platform that helps freelancers and companies build beautiful landing
                     pages in minutes. Sign up for free.</p>
-                <button class="btn btn-primary d-inline-flex flex-row align-items-center">
+                <button styleclass="btn btn-primary d-inline-flex flex-row align-items-center" style="background-color: orange;">
                     Get started now
                     <em class="ml-2" data-feather="arrow-right"></em>
                 </button>
@@ -267,7 +267,7 @@
                 <h3>Try Knight free for 7 days</h3>
                 <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in nisi commodo,
                     tempus odio a, vestibulum nibh.</p>
-                <button class="btn btn-primary">
+                <button style= "background-color:orange" class="btn btn-primary">
                     Create your account
                 </button>
             </div>
