--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
                 <h1 class="heading-black text-capitalize">Esercitazione 24 Febbraio 2023</h1>
-                <p class="lead py-3">Knight is a platform that helps freelancers and companies build beautiful landing
-                    pages in minutes. Sign up for free.</p>
+                <p class="lead py-3">Federico Giuseppe De Palo, corso n°25234/2021 “INTERNATIONAL DIGITAL MARKETING SPECIALIST FOR EXPORT” Anno Formativo 2022/23</p>
                 <button styleclass="btn btn-primary d-inline-flex flex-row align-items-center" style="background-color: orange;">
                     Get started now
                     <em class="ml-2" data-feather="arrow-right"></em>
