--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="col-md-6 box">
                         <div class="icon-box box-primary">
                             <div class="icon-box-inner">
-                                <span data-feather="edit-3" width="35" height="35"></span>
+                                <span style="color:#14CC9E;"data-feather="edit-3" width="35" height="35" ></span>
                             </div>
                         </div>
                         <h5>Create once. Share everywhere.</h5>
@@ -129,7 +129,7 @@
                     <div class="col-md-6 box">
                         <div class="icon-box box-success">
                             <div class="icon-box-inner">
-                                <span data-feather="monitor" width="35" height="35"></span>
+                                <span style="color:#14CC9E;" data-feather="monitor" width="35" height="35"></span>
                             </div>
                         </div>
                         <h5>Unlimited devices</h5>
@@ -139,7 +139,7 @@
                     <div class="col-md-6 box">
                         <div class="icon-box box-danger">
                             <div class="icon-box-inner">
-                                <span data-feather="layout" width="35" height="35"></span>
+                                <span style="color:#14CC9E;" data-feather="layout" width="35" height="35"></span>
                             </div>
                         </div>
                         <h5>Beautiful tempates & layouts</h5>
@@ -149,7 +149,7 @@
                     <div class="col-md-6 box">
                         <div class="icon-box box-info">
                             <div class="icon-box-inner">
-                                <span data-feather="globe" width="35" height="35"></span>
+                                <span style="color:#14CC9E;" data-feather="globe" width="35" height="35"></span>
                             </div>
                         </div>
                         <h5>Available globally</h5>
