--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="row feature-boxes">
                     <div class="col-md-6 box">
                         <div class="icon-box box-primary">
-                            <div class="icon-box-inner">
+                            <div style="color:#14CC9E;"class="icon-box-inner">
                                 <span style="color:#14CC9E;"data-feather="edit-3" width="35" height="35" ></span>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-success">
-                            <div class="icon-box-inner">
+                            <div style="color:#14CC9E;"class="icon-box-inner">
                                 <span style="color:#14CC9E;" data-feather="monitor" width="35" height="35"></span>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-danger">
-                            <div class="icon-box-inner">
+                            <div style="color:#14CC9E;"class="icon-box-inner">
                                 <span style="color:#14CC9E;" data-feather="layout" width="35" height="35"></span>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-info">
-                            <div class="icon-box-inner">
+                            <div class="icon-box-inner" style="color:#14CC9E;">
                                 <span style="color:#14CC9E;" data-feather="globe" width="35" height="35"></span>
                             </div>
                         </div>
