--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <style>
+        body {
+          background-color: #E6E6FA;
+        }
+        </style>
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -44,6 +49,7 @@
     <!-- End Meta Pixel Code -->
 </head>
 <body background-color:="#012334">
+
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PT2LRP9"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
