--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <style>
-        body {
-          background-color: #E6E6FA;
-        }
-        </style>
+    
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -48,7 +44,7 @@
     /></noscript>
     <!-- End Meta Pixel Code -->
 </head>
-<body background-color:="#012334">
+<body color:="#012334">
 
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PT2LRP9"
@@ -174,7 +170,7 @@
             </div>
             <div class="col-md-5">
                 <div class="slick-about">
-                    <img src="img/blog-1.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 1"/>
+                    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.entrepreneur.com%2Fen-ae%2Fmarketing%2Fdigital-marketing-tips-for-a-successful-2020%2F344445&psig=AOvVaw3LefM1KSBpLiOb3tLgCNwo&ust=1677331531632000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCJiLroKhrv0CFQAAAAAdAAAAABAE" class="img-fluid rounded d-block mx-auto" alt="Work 1"/>
                     <img src="img/blog-2.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 2"/>
                     <img src="img/blog-3.jpg" class="img-fluid rounded d-block mx-auto" alt="Work 3"/>
                 </div>
