--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     /></noscript>
     <!-- End Meta Pixel Code -->
 </head>
-<body color:="#012334">
+<body background-color: #bbff00;
 
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PT2LRP9"
@@ -193,7 +193,7 @@
             <div class="col-12 mx-auto">
                 <div class="card-deck pricing-table">
                     <div class="card">
-                        <div class="card-body">
+                        <div class="card-body" style="background-color: #145242;">
                             <h3 class="card-title pt-3">Personal</h3>
                             <h2 class="card-title text-primary mb-0 pt-4">$59</h2>
                             <div class="text-muted font-weight-medium mt-2">per month</div>
@@ -209,7 +209,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-body">
+                        <div class="card-body" style="background-color: #16402b;">
                             <h3 class="card-title pt-3">Agency</h3>
                             <h2 class="card-title text-info mb-0 pt-4">$159</h2>
                             <div class="text-muted font-weight-medium mt-2">per month</div>
@@ -225,7 +225,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-body">
+                        <div class="card-body" style="background-color: #020805;">
                             <h3 class="card-title pt-3">Enterprise</h3>
                             <h2 class="card-title text-primary mb-0 pt-4">$499</h2>
                             <div class="text-muted font-weight-medium mt-2">per month</div>
