--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </section>
 
 <!--hero header-->
-<section class="py-7 py-md-0 bg-hero" id="home" style="color:#012334;">
+<section class="py-7 py-md-0 bg-hero" id="home" style="background-color:#012334;">
     <div class="container">
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
@@ -184,7 +184,7 @@
 
 <!--pricing section-->
 <section class="py-7 bg-dark section-angle top-right bottom-right" id="pricing" style="background-color:#012334;">
-    <div class="container">
+    <div class="container" style="background-color:#012334;">
         <div class="row">
             <div class="col-md-6 mx-auto text-center">
                 <h2 class="text-white heading-black">Choose your pricing plan.</h2>
@@ -328,8 +328,8 @@
 </section>
 
 <!--news section-->
-<section class="py-7 bg-dark section-angle top-left bottom-left" id="blog">
-    <div class="container">
+<section class="py-7 bg-dark section-angle top-left bottom-left" id="blog" style="background-color:#012334;">
+    <div class="container" style="background-color:#012334;">
         <div class="row">
             <div class="col-md-6 mx-auto text-center">
                 <h2 class="heading-black">News from Knight.</h2>
